fix lastSaved alignment

--- a/css/components/_home.css
+++ b/css/components/_home.css
@@ -103,3 +103,15 @@
  	margin-right: auto;
  	max-width: initial;
 }
+
+input {
+  background: transparent;
+  border-top: transparent !important;
+  border-left: transparent !important;
+  border-right: transparent !important;
+  border-bottom: transparent !important;
+  font-weight: 200;
+  color: white;
+  padding-left: 0;
+  box-shadow: none !important;
+}
